[gd_scene load_steps=8 format=3 uid="uid://dq13ogdpp1wd8"]

[ext_resource type="Script" uid="uid://cn4bb6reeqx68" path="res://scripts/fish_blast.gd" id="1_tpjek"]
[ext_resource type="Shader" uid="uid://djx2swlbudkwo" path="res://shaders/fish_blast.gdshader" id="1_tvyjt"]
[ext_resource type="Material" uid="uid://caxu4fl34w6y0" path="res://scenes/firework_bloom_particle.tres" id="2_tpjek"]
[ext_resource type="AudioStream" uid="uid://d0qptiscuq65q" path="res://assets/sounds/Firework-projectv3.mp3" id="3_5grtn"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_tpjek"]
shader = ExtResource("1_tvyjt")
shader_parameter/scale_min = 0.0
shader_parameter/scale_max = 0.0
shader_parameter/hue_variation_min = 0.0
shader_parameter/hue_variation_max = 0.0
shader_parameter/anim_speed_min = 0.0
shader_parameter/anim_speed_max = 0.0
shader_parameter/anim_offset_min = 0.0
shader_parameter/anim_offset_max = 0.0
shader_parameter/lifetime_randomness = 1.0
shader_parameter/emission_shape_offset = Vector3(0, 0, 0)
shader_parameter/emission_shape_scale = Vector3(1, 1, 1)
shader_parameter/velocity_pivot = Vector3(0, 0, 0)
shader_parameter/color_value = Color(0, 0, 0, 1)
shader_parameter/gravity = Vector3(0, 0, 0)
shader_parameter/air_resistance = 1.0
shader_parameter/sphere = false
shader_parameter/sphere_force = 900.0
shader_parameter/turn_strength = 2.0
shader_parameter/swim_accel = 200.3
shader_parameter/glow_start = 2.0
shader_parameter/glow_end = 0.0
shader_parameter/glow_falloff = 1.0
shader_parameter/alpha_falloff = 1.1

[sub_resource type="QuadMesh" id="QuadMesh_ieat8"]
material = ExtResource("2_tpjek")
size = Vector2(0.5, 0.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5grtn"]
shader = ExtResource("1_tvyjt")
shader_parameter/scale_min = 0.0
shader_parameter/scale_max = 0.0
shader_parameter/hue_variation_min = 0.0
shader_parameter/hue_variation_max = 0.0
shader_parameter/anim_speed_min = 0.0
shader_parameter/anim_speed_max = 0.0
shader_parameter/anim_offset_min = 0.0
shader_parameter/anim_offset_max = 0.0
shader_parameter/lifetime_randomness = 0.0
shader_parameter/emission_shape_offset = Vector3(0, 0, 0)
shader_parameter/emission_shape_scale = Vector3(1, 1, 1)
shader_parameter/velocity_pivot = Vector3(0, 0, 0)
shader_parameter/color_value = Color(0, 0, 0, 1)
shader_parameter/gravity = Vector3(0, 0, 0)
shader_parameter/air_resistance = 0.0
shader_parameter/sphere = false
shader_parameter/sphere_force = 8.0
shader_parameter/turn_strength = 2.0
shader_parameter/swim_accel = 2.0
shader_parameter/glow_start = 300.0
shader_parameter/glow_end = 0.0
shader_parameter/glow_falloff = 1.0
shader_parameter/alpha_falloff = 1.1

[node name="FishBlast" type="Node3D"]
script = ExtResource("1_tpjek")

[node name="OuterBlastParticles" type="GPUParticles3D" parent="."]
emitting = false
amount = 400
lifetime = 4.0
one_shot = true
explosiveness = 1.0
process_material = SubResource("ShaderMaterial_tpjek")
draw_pass_1 = SubResource("QuadMesh_ieat8")

[node name="BlastTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="FireworkBlast" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_5grtn")

[node name="OuterBlastParticles2" type="GPUParticles3D" parent="."]
visible = false
emitting = false
amount = 10
lifetime = 8.0
one_shot = true
explosiveness = 1.0
process_material = SubResource("ShaderMaterial_5grtn")
draw_pass_1 = SubResource("QuadMesh_ieat8")
